--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Quiz_App</string>
+    <string name="yname">Your Name</string>
+    <string name="fname">Friends Name</string>
+    <string name="startquiz">Start Quiz</string>
 </resources>
