--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="yname">Your Name</string>
     <string name="fname">Friends Name</string>
     <string name="startquiz">Start Quiz</string>
+    <string name="restartquiz">Try a different Quiz ?</string>
 
 </resources>
